--- a/project/pad/templates/base.html
+++ b/project/pad/templates/base.html
@@ -18,7 +18,7 @@
 	<body>
         <div class='navbar'>
             <div class='navbar-content'>
-                <a href="{% url 'index' %}" id='title'>
+                <a href="{% url 'index' %}" id="title">
                     <i class="fa fa-book"></i> Pad
                 </a>
             </div>
